--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <script>
     function enviarRespuesta(respuesta) {
-      fetch('https://api-encuesta.onrender.com', {
+      fetch('https://api-encuesta.onrender.com/guardar_respuesta', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ respuesta })
