--- a/carta.html
+++ b/carta.html
@@ -18,7 +18,7 @@
     <label for="check">
       <span class="letter main"></span>
       <div class="note">
-        <p class="int">Srta. Jadek,</p>
+        <p class="int">niña bonita,</p>
         <p>
           Me hubiese gustado mostrarte esta carta de forma física, si embargo, no es impedimento para expresarte
           algunas cosas.
@@ -54,7 +54,7 @@
   <script>
     const checkbox = document.getElementById('check');
     const audio = document.getElementById('audioCarta');
-    audio.volume = 0.2;
+    audio.volume = 0.4;
 
     checkbox.addEventListener('change', function () {
       if (this.checked) {
