correccion de mayuscula

--- a/carta.html
+++ b/carta.html
@@ -18,7 +18,7 @@
     <label for="check">
       <span class="letter main"></span>
       <div class="note">
-        <p class="int">niña bonita,</p>
+        <p class="int">Niña bonita,</p>
         <p>
           Me hubiese gustado mostrarte esta carta de forma física, si embargo, no es impedimento para expresarte
           algunas cosas.
