correccion de letra

--- a/carta.html
+++ b/carta.html
@@ -20,7 +20,7 @@
       <div class="note">
         <p class="int">Niña bonita,</p>
         <p>
-          Me hubiese gustado mostrarte esta carta de forma física, si embargo, no es impedimento para expresarte
+          Me hubiese gustado mostrarte esta carta de forma física, sin embargo, no es impedimento para expresarte
           algunas cosas.
           Es sorprendente que esté temblando al escribir esta carta, no solamente por el frío, sino porque mi corazón
           se siente arrepentido de lo que ha pasado estos últimos días. Suelen decir que en una pelea no solo pierde
